FIX #001 * styles details * gap equality

--- a/src/component/aboutMe/aboutMe.module.css
+++ b/src/component/aboutMe/aboutMe.module.css
@@ -14,7 +14,7 @@
     position: relative;
 }
 .aboutMe article:last-child{
-    gap: 1rem;
+    gap: .5rem;
     justify-content: center;
 }
 .aboutMe article:first-child::after{
