--- a/src/component/hobbies/hobbies.module.css
+++ b/src/component/hobbies/hobbies.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: .5rem 0;
+    position: relative;
 }
 .hobbies button{
     padding: .5rem 1rem;
@@ -24,16 +24,34 @@
     width: 100%;
     height: 15rem;
     display: flex;
+    overflow: hidden;
     overflow-x: scroll;
-    padding: .5rem 0;
+    padding: .5rem 2rem;
+    scrollbar-width: thin;
     gap: .5rem;
 }
-.hobbiesSlider::-webkit-scrollbar-track-piece{
-    background: #0000;
+.hobbies::before,
+.hobbies::after{
+    content: "";
+    width: 2rem;
+    height: 15rem;
+    position: absolute;
+    bottom: 1rem;
+}
+.hobbies::before{
+    left: 0;
+    background: linear-gradient(90deg, var(--bg-color), #0000);
+}
+.hobbies::after{
+    right: 0;
+    background: linear-gradient(90deg, #0000, var(--bg-color));
 }
 .hobbiesSlider article{
-    flex: 0 0 40%;
+    flex: 0 0 11.25rem;
     padding: .5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     background: var(--bg-color-tag);
 }
 .hobbiesSlider article,
