--- a/src/component/portfolio/portfolio.module.css
+++ b/src/component/portfolio/portfolio.module.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(12rem, 1fr));
-    gap: 1rem;
+    gap: .5rem;
 }
 .portfolio article{
     border-radius: .75rem;
