--- a/src/pages/portfolio_v1.css
+++ b/src/pages/portfolio_v1.css
@@ -202,7 +202,7 @@ header .heading .extras{
 	}
 }
 main{
-  padding: 1rem 2rem 2rem 2rem;
+  padding: 1rem 2rem;
 }
 
 @media (max-width: 750px){
